--- a/demo/style.css
+++ b/demo/style.css
@@ -417,46 +417,62 @@ body {
   font-family: "SimSun";
   color: #111111; }
 
-@-webkit-ketframes testFrames {
+@-webkit-keyframes testFrames {
   from {
-    -webkit-transform: scaleX(1);
-    -ms-transform: scaleX(1);
-    transform: scaleX(1); }
+    -webkit-transform: scale(2, 1);
+    -moz-transform: scale(2, 1);
+    -ms-transform: scale(2, 1);
+    transform: scale(2, 1); }
 
   to {
-    -webkit-transform: scaleX(2);
-    -ms-transform: scaleX(2);
-    transform: scaleX(2); } }
-@-ms-ketframes testFrames {
+    -webkit-transform: scale(20, 10);
+    -moz-transform: scale(20, 10);
+    -ms-transform: scale(20, 10);
+    transform: scale(20, 10); } }
+@-ms-keyframes testFrames {
   from {
-    -webkit-transform: scaleX(1);
-    -ms-transform: scaleX(1);
-    transform: scaleX(1); }
+    -webkit-transform: scale(2, 1);
+    -moz-transform: scale(2, 1);
+    -ms-transform: scale(2, 1);
+    transform: scale(2, 1); }
 
   to {
-    -webkit-transform: scaleX(2);
-    -ms-transform: scaleX(2);
-    transform: scaleX(2); } }
-@-moz-ketframes testFrames {
+    -webkit-transform: scale(20, 10);
+    -moz-transform: scale(20, 10);
+    -ms-transform: scale(20, 10);
+    transform: scale(20, 10); } }
+@-moz-keyframes testFrames {
   from {
-    -webkit-transform: scaleX(1);
-    -ms-transform: scaleX(1);
-    transform: scaleX(1); }
+    -webkit-transform: scale(2, 1);
+    -moz-transform: scale(2, 1);
+    -ms-transform: scale(2, 1);
+    transform: scale(2, 1); }
 
   to {
-    -webkit-transform: scaleX(2);
-    -ms-transform: scaleX(2);
-    transform: scaleX(2); } }
-@ketframes testFrames {
+    -webkit-transform: scale(20, 10);
+    -moz-transform: scale(20, 10);
+    -ms-transform: scale(20, 10);
+    transform: scale(20, 10); } }
+@keyframes testFrames {
   from {
-    -webkit-transform: scaleX(1);
-    -ms-transform: scaleX(1);
-    transform: scaleX(1); }
+    -webkit-transform: scale(2, 1);
+    -moz-transform: scale(2, 1);
+    -ms-transform: scale(2, 1);
+    transform: scale(2, 1); }
 
   to {
-    -webkit-transform: scaleX(2);
-    -ms-transform: scaleX(2);
-    transform: scaleX(2); } }
+    -webkit-transform: scale(20, 10);
+    -moz-transform: scale(20, 10);
+    -ms-transform: scale(20, 10);
+    transform: scale(20, 10); } }
 .wrapper-in {
   padding-left: 1%;
   padding-right: 1%; }
+
+.ss {
+  background-image: -webkit-radial-gradient(blue, white);
+  background-image: radial-gradient(blue, white);
+  background-repeat: no-repeat; }
+@-moz-document url-prefix() {
+  .ss {
+    margin-left: 3px; } }
