--- a/core/mixin.scss
+++ b/core/mixin.scss
@@ -1,8 +1,7 @@
 @charset "UTF-8";
-/* =============================================================================
-   mixin SCSS
-   mixin 通过@include调用，可以传参
-   ========================================================================== */
+// =============================================================================
+//   mixin SCSS
+//   mixin 通过@include调用，可以传参
 
 // 多属性组合
 // =============================================================================
@@ -95,12 +94,12 @@
   list-style: disc;
 }
 
-// 图片替换
-/* 高级浏览器用2
-   ie7-8不支持transparent,用1
-   ie6用1会有一条细线，所以用3
-   要兼容ie6，需要确定高度
-*/
+//	图片替换
+//	高级浏览器用2
+//	ie7-8不支持transparent,用1
+//  ie6用1会有一条细线，所以用3
+//  要兼容ie6，需要确定高度
+//
 @mixin ir($height: 99) {
   font: 0/0 a;            //1
   text-shadow: none;
