--- a/demo/style.css
+++ b/demo/style.css
@@ -1,19 +1,3 @@
-@charset "UTF-8";
-/* =============================================================================
-   SCSS  config
-   ========================================================================== */
-/* =============================================================================
-   CSS3
-   ========================================================================== */
-/* =============================================================================
-   mixin SCSS
-   mixin 通过@include调用，可以传参
-   ========================================================================== */
-/* 高级浏览器用2
-   ie7-8不支持transparent,用1
-   ie6用1会有一条细线，所以用3
-   要兼容ie6，需要确定高度
-*/
 /*! normalize.css 2012-01-31T16:06 UTC - http://github.com/necolas/normalize.css */
 /* =============================================================================
    HTML5 display definitions
@@ -411,68 +395,77 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+html {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%; }
+
+body,
+button,
+input,
+select,
+textarea {
+  font-family: "SimSun"; }
+
+img {
+  vertical-align: middle; }
+
+textarea {
+  resize: vertical; }
+
+h1, h2, h3, h4, h5, h6, p, figure, form {
+  margin: 0; }
+
+ul, ol, li, dl, dd {
+  margin: 0;
+  padding: 0; }
+
+ul, ol {
+  list-style: none outside none; }
+
+a {
+  text-decoration: none; }
+
+h1, h2, h3 {
+  font-weight: normal; }
+
 body {
   line-height: 1.4;
-  background-color: #dddddd;
+  font-size: 18px;
+  background-color: #FFF;
   font-family: "SimSun";
-  color: #111111; }
+  color: #333; }
 
-@-webkit-keyframes testFrames {
-  from {
-    -webkit-transform: scale(2, 1);
-    -moz-transform: scale(2, 1);
-    -ms-transform: scale(2, 1);
-    transform: scale(2, 1); }
-
-  to {
-    -webkit-transform: scale(20, 10);
-    -moz-transform: scale(20, 10);
-    -ms-transform: scale(20, 10);
-    transform: scale(20, 10); } }
-@-ms-keyframes testFrames {
-  from {
-    -webkit-transform: scale(2, 1);
-    -moz-transform: scale(2, 1);
-    -ms-transform: scale(2, 1);
-    transform: scale(2, 1); }
-
-  to {
-    -webkit-transform: scale(20, 10);
-    -moz-transform: scale(20, 10);
-    -ms-transform: scale(20, 10);
-    transform: scale(20, 10); } }
-@-moz-keyframes testFrames {
-  from {
-    -webkit-transform: scale(2, 1);
-    -moz-transform: scale(2, 1);
-    -ms-transform: scale(2, 1);
-    transform: scale(2, 1); }
-
-  to {
-    -webkit-transform: scale(20, 10);
-    -moz-transform: scale(20, 10);
-    -ms-transform: scale(20, 10);
-    transform: scale(20, 10); } }
-@keyframes testFrames {
-  from {
-    -webkit-transform: scale(2, 1);
-    -moz-transform: scale(2, 1);
-    -ms-transform: scale(2, 1);
-    transform: scale(2, 1); }
-
-  to {
-    -webkit-transform: scale(20, 10);
-    -moz-transform: scale(20, 10);
-    -ms-transform: scale(20, 10);
-    transform: scale(20, 10); } }
 .wrapper-in {
-  padding-left: 1%;
-  padding-right: 1%; }
+  *zoom: 1; }
+  .wrapper-in:after {
+    display: table;
+    content: '';
+    clear: both; }
 
-.ss {
-  background-image: -webkit-radial-gradient(blue, white);
-  background-image: radial-gradient(blue, white);
-  background-repeat: no-repeat; }
-@-moz-document url-prefix() {
-  .ss {
-    margin-left: 3px; } }
+.slide-bar {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 300px;
+  height: 100%;
+  border-right: 1px solid #E4393C;
+  background-color: #fceded;
+  overflow: auto; }
+  .slide-bar .slide-tit {
+    padding: 20px;
+    font-weight: bold;
+    font-size: 36px; }
+  .slide-bar .slide-tit-sub {
+    background-color: #ea6668;
+    border-bottom: #E4393C;
+    color: #FFFFFF; }
+  .slide-bar .slide-ul li {
+    border-bottom: 1px solid #f6c0c1; }
+    .slide-bar .slide-ul li a {
+      display: block;
+      padding: 5px 10px;
+      color: #333; }
+
+/*# sourceMappingURL=style.css.map */
