--- a/core/mixin.scss
+++ b/core/mixin.scss
@@ -203,6 +203,24 @@
   }
 }
 
+// 形状
+// ==================================================================
+// 矩形
+// 传一个参数就是正方形
+@mixin rect($px...) {
+    @if length($px) > 1 {
+       width: nth($px, 1);
+       height: nth($px, 2); 
+    }
+    @else {
+        width: $px;
+        height: $px;
+    }
+}
+// 圆形
+@mixin circle($px) {
+
+}
 
 
 
